tests/snapshots/ficha_40x12.snap
---
source: tests/redimensionado/arnes.rs
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│      ✕ ventana demasiado pequeña     │
│         40×12 · mínimo 50×14         │
│        (Ficha necesita 50×14)        │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
