tests/snapshots/ficha_desplegable_estrecha_60x20.snap
---
source: tests/redimensionado/arnes.rs
---
┌ MAGI · HOST · hetzner-01 · editar · #1 ──────────────────┐
│  [ 22 ]                                                 ↑│
│  Grupo                                                   │
│  [ produccion                 ▾ ]                        │
│  Etiquetas                                               │
│  [ web ]                                                 │
│                                                          │
│ ACCESO                                                   │
│  Usuario                                                 │
│  [ root ]                                                │
│  Identidad                                               │
│  [ auto                                     ▾ ]          │
│  Sa┌─────────────────────────────────┐                  ↓│
│  TÚ│ auto                            │           n nuevo │
│    │ contraseña · se pide al conectar│.0.0.1:5…  postgres│
│┌ SE│ contraseña · llavero del sistema│ EXTRA ───────────┐│
││   └─────────────────────────────────┘                  ││
│└───────────────────────────┘└───────────────────────────┘│
└──────────────────────────────────────────────────────────┘
 ⇥ campo  ↵ desplegable  ^s guardar  esc descartar
