tests/snapshots/ficha_sugerencias_estrecha_60x20.snap
---
source: tests/redimensionado/arnes.rs
---
┌ MAGI · HOST · nuevo · nuevo ─────────────────────────────┐
│ IDENTIFICACIÓN                                           │
│  Nombre                                                  │
│  [  ]                                                    │
│  Dirección                                               │
│  [  ]                                                    │
│  Puerto                                                  │
│  [ 22 ]                                                  │
│  Grupo                                                   │
│  [ produccion                 ▾ ]                        │
│  Etiquetas                                               │
│  [ w┃ ]                                                  │
│    ┌ etiquetas ─────────────────┐                       ↓│
│  TÚ│ web                        │                n nuevo │
│    └────────────────────────────┘eles                    │
│┌ SERVICIOS ────────────────┐┌ OPCIONES EXTRA ───────────┐│
││                           ││                           ││
│└───────────────────────────┘└───────────────────────────┘│
└──────────────────────────────────────────────────────────┘
 ⇥ campo  ↵ desplegable  ^s guardar  esc descartar
