tests/snapshots/ficha_ultimo_campo_80x16.snap
---
source: tests/redimensionado/arnes.rs
---
┌ MAGI · HOST · hetzner-01 · editar · #1 ──────────────────────────────────────┐
│      ruta                                                                   ↑│
│      [  ]                                                                    │
│      patrón  (< 24 h)                                                        │
│      [  ]                                                                    │
│  [x] tests en verde                                                          │
│      comando                                                                 │
│      [ …pp -L 1 --json conclusion -q '.[0].conclusion' | grep -qx success┃ ] │
│                                                                              │
│  TÚNELES                                                             n nuevo │
│      [a] local    127.0.0.1:5432 → 127.0.0.1:5432                    postgres│
│┌ SERVICIOS ──────────────────────────┐┌ OPCIONES EXTRA ─────────────────────┐│
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
 ⇥ campo  ↵ desplegable  espacio casilla  ^s guardar  esc descartar
