tests/snapshots/flota_200x60.snap
---
source: tests/redimensionado/arnes.rs
---
┌ MAGI · FLOTA ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 7 hosts · 3 nominal · sondeo hace NN s ─┐
│              ▸ ◐ backup-nas   CARGA                          │   backup-nas                                                                                                                          │
│                ○ dgx-spark    FRÍA                           │   192.168.1.40:22                                                                                                                     │
│                ● hetzner-01   NOMINAL                        │                                                                                                                                       │
│                ● hetzner-02   NOMINAL                        │   CARGA ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  0.1/8                                                                               │
│                ◐ mac-mini-m1  CARGA                          │   MEM   ████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  20 %                                                                                │
│                ✕ rincon-dev   CAÍDA                          │   DSK   █████████████████████████████████████░░░  93 %                                                                                │
│                ● vps-openclaw NOMINAL                        │   NET   ↓ —  ↑ —                                                                                                                      │
│                                                              │   UP    12 d 01 h                                                                                                                     │
│                                                              │                                                                                                                                       │
│                                                              │   sondeado hace NN s en 420 ms · CARGA                                                                                                │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
│                                                              │                                                                                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ↵ ssh  ↓↑ mover  r sondear  R todos  a auto  e editar  / filtrar  ! snippets  ^p paleta  q salir  ? ayuda
